added kb stock tools